--- a/AppForeignExchange/AppForeignExchange/Views/ForeignExchangePage.xaml
+++ b/AppForeignExchange/AppForeignExchange/Views/ForeignExchangePage.xaml
@@ -17,50 +17,75 @@
                 FontAttributes="Bold"
                 FontSize="Large"
                 HorizontalOptions="Center"
+                Margin="10"
                 Text="Foreign Exchange">
             </Label>
-            <StackLayout
-                Orientation="Horizontal">
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width=".5*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width=".5*"/>
+                </Grid.ColumnDefinitions>
                 <Label
+                    Grid.Column="0"
+                    Grid.Row="0"
                     Text="Amount"
-                    VerticalOptions="Center"
-                    WidthRequest="100">                    
+                    VerticalOptions="Center">
                 </Label>
                 <Entry
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="0"
                     Keyboard="Numeric"
-                    HorizontalOptions="FillAndExpand"
                     Placeholder="Enter amount..."
-                    Text="{Binding Amount, Mode=TwoWay}">                    
+                    Text="{Binding Amount, Mode=TwoWay}">
                 </Entry>
-            </StackLayout>
-            <StackLayout
-                Orientation="Horizontal">
                 <Label
+                    Grid.Column="0"
+                    Grid.Row="1"
                     Text="Source Rate:"
-                    VerticalOptions="Center"
-                    WidthRequest="100">
+                    VerticalOptions="Center">
                 </Label>
                 <Picker
+                    Grid.Column="1"
+                    Grid.Row="1"
                     ItemDisplayBinding="{Binding Name}"
                     ItemsSource="{Binding Rates}"
                     SelectedItem="{Binding SourceRate, Mode=TwoWay}"
                     Title="Select source rate...">
                 </Picker>
-            </StackLayout>
-            <StackLayout
-                Orientation="Horizontal">
                 <Label
+                    Grid.Column="0"
+                    Grid.Row="2"
                     Text="Target Rate:"
-                    VerticalOptions="Center"
-                    WidthRequest="100">
+                    VerticalOptions="Center">
                 </Label>
                 <Picker
+                    Grid.Column="1"
+                    Grid.Row="2"                        
                     ItemDisplayBinding="{Binding Name}"
                     ItemsSource="{Binding Rates}"
-                    SelectedItem="{Binding TargetRateId, Mode=TwoWay}"
+                    SelectedItem="{Binding TargetRate, Mode=TwoWay}"
                     Title="Select target rate...">
                 </Picker>
-            </StackLayout>
+                <Image
+                    Grid.Column="2"
+                    Grid.Row="1" 
+                    Grid.RowSpan="2"
+                    HeightRequest="40"
+                    Source="change.png"
+                    WidthRequest="40">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding ChangeCommand}"/>
+                    </Image.GestureRecognizers>
+                </Image>
+            </Grid>
             <Button
                 Command="{Binding ConvertCommand}"
                 Margin="30,10,30,10"
