--- a/AppForeignExchange/AppForeignExchange/App.xaml
+++ b/AppForeignExchange/AppForeignExchange/App.xaml
@@ -9,6 +9,9 @@
             <!--Locator-->
             <Infra:InstanceLocator x:Key="Locator"/>
 
+            <!-- Parameters -->
+            <x:String x:Key="URLAPI">http://apiexchangerates.azurewebsites.net</x:String>
+
         </ResourceDictionary>
 	</Application.Resources>
 </Application>
